// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridBlock block renders grid block and unsupported columns 1`] = `
<div>
  <div
    class="reark-grid"
    style="display: flex; gap: 16px;"
  >
    <div
      class="reark-unsupported-block"
    >
      <strong>
        Unsupported block type: 
        16
      </strong>
    </div>
    <div
      class="reark-unsupported-block"
    >
      <strong>
        Unsupported block type: 
        16
      </strong>
    </div>
  </div>
</div>
`;

exports[`renders grid block with no columns 1`] = `
<div>
  <div
    class="reark-grid"
    style="display: flex; gap: 16px;"
  />
</div>
`;
